[package]
name = "fix-name-case"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
console = "0.15.7"
convert_case = "0.6.0"
eyre = "0.6.8"
fncmd = "2.1.0"
glob-match = "0.2.1"
ignore = "0.4.20"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
which = "4.4.0"
