[package]
name = "fix-name-case"
version = "1.3.0"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "CLI tool to convert variable and function names to snake_case"
readme = "README.md"
homepage = "https://github.com/AgriConnect/FixNameCase"
repository = "https://github.com/AgriConnect/FixNameCase"
exclude = [".github", "debian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.2.2"
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = "0.6.3"
console = "0.15.8"
convert_case = "0.6.0"
eyre = "0.6.12"
glob-match = "0.2.1"
ignore = "0.4.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
unicode-intervals = "0.2.0"
which = "6.0.3"

[package.metadata.deb]
copyright = "2024, Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"
maintainer = "Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"
section = "rust"
license-file = ["debian/license", "3"]
changelog = "debian/changelog"
extended-description = """Hidden files and files listed in .gitignore are untouched.
For now, only C/C++ files are supported."""
